# backend-socket

./: .env.example  .gitignore  README.md  config.py  main.py  misc.py  pyproject.toml
app/di/: containers.py  redis.py
app/services/core/: client.py
app/services/rest/: http.py
app/utils/: encoders.py  redis.py
app/v1/: base.py  namespace.py
app/v1/models/: http_response.py  on_typing.py
app/v1/security/: auth.py  exceptions.py  models.py  urls.py
app/v1/users/: repo.py
